@@ -158,7 +158,7 @@ namespace libtorrent
 #if defined TORRENT_VERBOSE_LOGGING || defined TORRENT_ERROR_LOGGING
 		error_code ec;
 		m_logger = m_ses.create_log(m_remote.address().to_string(ec) + "_"
-			+ boost::lexical_cast<std::string>(m_remote.port()), m_ses.listen_port());
+			+ to_string(m_remote.port()).elems, m_ses.listen_port());
 		(*m_logger) << "*** OUTGOING CONNECTION\n";
 #endif
 #ifdef TORRENT_DEBUG
@@ -266,7 +266,7 @@ namespace libtorrent
 		error_code ec;
 		TORRENT_ASSERT(m_socket->remote_endpoint(ec) == m_remote || ec);
 		m_logger = m_ses.create_log(remote().address().to_string(ec) + "_"
-			+ boost::lexical_cast<std::string>(remote().port()), m_ses.listen_port());
+			+ to_string(remote().port()).elems, m_ses.listen_port());
 		(*m_logger) << "*** INCOMING CONNECTION\n";
 #endif
 		
