@@ -21,6 +21,7 @@ release 0.14.2
 	* fixed typo in python binding (torrent_handle::piece_prioritize should
 	  be torrent_handle::piece_priorities)
 	* fixed race condition when saving DHT state
+	* fixed bugs related to lexical_cast being locale dependent
 
 release 0.14.1
 
